[project]
name = "tutorial-pipeline-weather"
version = "0.1.0"
description = "Weather data pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "apache-airflow-core>=3.2.0",
]
